--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,13 @@
         }
     ],
     "require": {
-        "php" : ">=5.4.0"
+        "php" : ">=5.4.0",
+        "doctrine/orm": "^2.5",
+        "rougin/spark-plug": "^0.4.1"
     },
     "require-dev": {
-        "doctrine/orm": "^2.5",
         "phpunit/phpunit" : "4.*",
         "rougin/codeigniter": "^0.1.2",
-        "rougin/spark-plug": "^0.4.1",
         "scrutinizer/ocular": "~1.1"
     },
     "autoload": {
