--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,11 @@
     "require": {
         "php" : ">=5.4.0",
         "doctrine/orm": "^2.5",
-        "rougin/spark-plug": "^0.4.1"
+        "rougin/spark-plug": "~0.4"
     },
     "require-dev": {
         "phpunit/phpunit" : "4.*",
-        "rougin/codeigniter": "^3.0.0",
+        "rougin/codeigniter": "~3.0",
         "scrutinizer/ocular": "~1.1"
     },
     "autoload": {
