--- a/composer.json
+++ b/composer.json
@@ -1,33 +1,26 @@
 {
     "name": "rougin/credo",
-    "description": "Integrates Doctrine to CodeIgniter with ease",
-    "keywords": [
-        "builder",
-        "codeigniter",
-        "credo",
-        "doctrine",
-        "php",
-        "query"
-    ],
+    "description": "Doctrine ORM integration for the Codeigniter framework.",
+    "keywords": ["codeigniter", "credo", "doctrine", "integration", "orm"],
     "homepage": "https://github.com/rougin/credo",
     "license": "MIT",
     "authors": [
         {
             "name": "Rougin Royce Gutib",
             "email": "rougingutib@gmail.com",
-            "homepage": "http://rougin.github.io",
+            "homepage": "https://rougin.github.io",
             "role": "Developer"
         }
     ],
     "require": {
-        "php" : ">=5.4.0",
-        "doctrine/orm": "^2.5",
+        "php": ">=5.4.0",
+        "doctrine/orm": "~2.5",
+        "rougin/codeigniter": "~3.0",
         "rougin/spark-plug": "~0.5"
     },
     "require-dev": {
-        "phpunit/phpunit" : "4.*",
-        "rougin/codeigniter": "~3.0",
-        "scrutinizer/ocular": "~1.1"
+        "phpunit/phpunit": "~4.2|~5.7",
+        "scrutinizer/ocular": "~1.1.0"
     },
     "autoload": {
         "psr-4": {
@@ -44,12 +37,12 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "0.3-dev"
+            "dev-master": "1.0-dev"
         }
     },
     "suggest": {
-        "rougin/codeigniter": "Installs CodeIgniter core through Composer",
-        "rougin/combustor": "Lets you generate controllers, models, and views from database tables for CodeIgniter",
-        "rougin/refinery": "\"Ready-to-eat\" migrations for CodeIgniter"
+        "rougin/codeigniter": "Core functionality of the Codeigniter framework.",
+        "rougin/combustor": "MVC code generator for the Codeigniter framework.",
+        "rougin/refinery": "\"Ready-to-eat\" migrations for the Codeigniter framework."
     }
 }
