--- a/composer.json
+++ b/composer.json
@@ -2,45 +2,56 @@
     "name": "rougin/credo",
     "description": "Doctrine ORM integration for the Codeigniter framework.",
     "keywords": ["codeigniter", "credo", "doctrine", "integration", "orm"],
-    "homepage": "https://github.com/rougin/credo",
+    "homepage": "https://rougin.github.io/credo/",
     "license": "MIT",
-    "authors": [
+    "authors":
+    [
         {
-            "name": "Rougin Royce Gutib",
+            "name": "Rougin Gutib",
             "email": "rougingutib@gmail.com",
-            "homepage": "https://rougin.github.io",
+            "homepage": "https://rougin.github.io/",
             "role": "Developer"
         }
     ],
-    "require": {
+    "require":
+    {
         "php": ">=5.4.0",
         "doctrine/orm": "~2.5",
         "rougin/codeigniter": "~3.0",
         "rougin/spark-plug": "~0.5"
     },
-    "require-dev": {
+    "require-dev":
+    {
         "phpunit/phpunit": "~4.2|~5.7",
         "scrutinizer/ocular": "~1.1.0"
     },
-    "autoload": {
-        "psr-4": {
+    "autoload":
+    {
+        "psr-4":
+        {
             "Rougin\\Credo\\": "src"
         }
     },
-    "autoload-dev": {
-        "psr-4": {
+    "autoload-dev":
+    {
+        "psr-4":
+        {
             "Rougin\\Credo\\": "tests"
         }
     },
-    "scripts": {
+    "scripts":
+    {
         "test": "phpunit"
     },
-    "extra": {
-        "branch-alias": {
+    "extra":
+    {
+        "branch-alias":
+        {
             "dev-master": "1.0-dev"
         }
     },
-    "suggest": {
+    "suggest":
+    {
         "rougin/codeigniter": "Core functionality of the Codeigniter framework.",
         "rougin/combustor": "MVC code generator for the Codeigniter framework.",
         "rougin/refinery": "\"Ready-to-eat\" migrations for the Codeigniter framework."
