--- a/composer.json
+++ b/composer.json
@@ -1,60 +1,62 @@
 {
-    "name": "rougin/credo",
-    "description": "Doctrine ORM integration for the Codeigniter framework.",
-    "keywords": ["codeigniter", "credo", "doctrine", "integration", "orm"],
-    "homepage": "https://roug.in/credo/",
-    "license": "MIT",
-    "authors":
-    [
-        {
-            "email": "rougingutib@gmail.com",
-            "homepage": "https://roug.in/",
-            "name": "Rougin Gutib",
-            "role": "Software Engineer"
-        }
-    ],
-    "require":
+  "name": "rougin/credo",
+  "description": "A Doctrine ORM wrapper for Codeigniter.",
+  "keywords": [ "codeigniter", "credo", "doctrine", "orm" ],
+  "homepage": "https://roug.in/credo/",
+  "license": "MIT",
+  "authors":
+  [
     {
-        "php": ">=5.4.0",
-        "doctrine/orm": "~2.5",
-        "rougin/codeigniter": "~3.0",
-        "rougin/spark-plug": "~0.5"
-    },
-    "require-dev":
-    {
-        "phpunit/phpunit": "~4.2|~5.7",
-        "scrutinizer/ocular": "~1.1.0"
-    },
-    "autoload":
-    {
-        "psr-4":
-        {
-            "Rougin\\Credo\\": "src"
-        }
-    },
-    "autoload-dev":
-    {
-        "psr-4":
-        {
-            "Rougin\\Credo\\": "tests"
-        }
-    },
-    "scripts":
-    {
-        "test": "phpunit"
-    },
-    "extra":
-    {
-        "branch-alias":
-        {
-            "dev-master": "1.0-dev"
-        }
-    },
-    "suggest":
-    {
-        "rougin/combustor": "CRUD generator for the Codeigniter framework.",
-        "rougin/ignite": "Composer-based project for the Codeigniter framework.",
-        "rougin/refinery": "\"Ready-to-eat\" migrations for Codeigniter framework",
-        "rougin/wildfire": "Query Builder wrapper for the Codeigniter framework."
+      "email": "rougingutib@gmail.com",
+      "homepage": "https://roug.in/",
+      "name": "Rougin Gutib",
+      "role": "Software Engineer"
     }
+  ],
+  "require":
+  {
+    "php": ">=5.4.0",
+    "doctrine/annotations": "~1.0",
+    "doctrine/cache": "~1.0",
+    "doctrine/orm": "~2.5",
+    "rougin/codeigniter": "~3.0",
+    "rougin/spark-plug": "~0.5"
+  },
+  "require-dev":
+  {
+    "phpunit/phpunit": "~4.2|~5.7|~6.0|~7.0|~8.0|~9.0",
+    "sanmai/phpunit-legacy-adapter": "~6.1|~8.0"
+  },
+  "autoload":
+  {
+    "psr-4":
+    {
+      "Rougin\\Credo\\": "src"
+    }
+  },
+  "autoload-dev":
+  {
+    "psr-4":
+    {
+      "Rougin\\Credo\\": "tests"
+    }
+  },
+  "scripts":
+  {
+    "test": "phpunit"
+  },
+  "extra":
+  {
+    "branch-alias":
+    {
+      "dev-master": "1.0-dev"
+    }
+  },
+  "suggest":
+  {
+    "rougin/combustor": "CRUD generator for the Codeigniter framework.",
+    "rougin/ignite": "Composer-based project for the Codeigniter framework.",
+    "rougin/refinery": "\"Ready-to-eat\" migrations for Codeigniter framework",
+    "rougin/wildfire": "Query Builder wrapper for the Codeigniter framework."
+  }
 }
