--- a/composer.json
+++ b/composer.json
@@ -19,12 +19,12 @@
     "doctrine/annotations": "~1.0",
     "doctrine/cache": "~1.0",
     "doctrine/orm": "~2.5",
-    "rougin/codeigniter": "~3.0",
-    "rougin/spark-plug": "~0.5"
   },
   "require-dev":
   {
     "phpunit/phpunit": "~4.2|~5.7|~6.0|~7.0|~8.0|~9.0",
+    "rougin/codeigniter": "~3.0",
+    "rougin/spark-plug": "~0.5",
     "sanmai/phpunit-legacy-adapter": "~6.1|~8.0"
   },
   "autoload":
