--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "php": ">=5.4.0",
     "doctrine/annotations": "~1.0",
     "doctrine/cache": "~1.0",
-    "doctrine/orm": "~2.5",
+    "doctrine/orm": "~2.5"
   },
   "require-dev":
   {
