--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
   "require":
   {
     "php": ">=5.4.0",
-    "doctrine/cache": "~1.0|~2.0",
+    "symfony/cache": "~2.8|~3.0|~4.0|~5.0|~6.0",
     "doctrine/orm": "~2.0|~3.0"
   },
   "require-dev":
