--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,22 @@ jobs:
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
 
+    - name: Install third-party packages for PHP 7.1
+      if: ${{ matrix.php-versions == '7.1' }}
+      run: composer require doctrine/annotations doctrine/cache --dev
+
+    - name: Install third-party packages for PHP 7.2
+      if: ${{ matrix.php-versions == '7.2' }}
+      run: composer require doctrine/annotations doctrine/cache --dev
+
+    - name: Install third-party packages for PHP 7.3
+      if: ${{ matrix.php-versions == '7.3' }}
+      run: composer require doctrine/annotations doctrine/cache --dev
+
+    - name: Install third-party packages for PHP 7.4
+      if: ${{ matrix.php-versions == '7.4' }}
+      run: composer require doctrine/annotations doctrine/cache --dev
+
     - name: Run test suite
       run: vendor/bin/phpunit --coverage-clover=coverage.clover
 
