--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,15 +42,15 @@ jobs:
 
     - name: Install third-party packages for PHP 7.2
       if: ${{ matrix.php-versions == '7.2' }}
-      run: composer require doctrine/annotations doctrine/cache:~1.0 --dev
+      run: composer require doctrine/annotations:~1.0 doctrine/cache:~1.0 --dev
 
     - name: Install third-party packages for PHP 7.3
       if: ${{ matrix.php-versions == '7.3' }}
-      run: composer require doctrine/annotations doctrine/cache:~1.0 --dev
+      run: composer require doctrine/annotations:~1.0 doctrine/cache:~1.0 --dev
 
     - name: Install third-party packages for PHP 7.4
       if: ${{ matrix.php-versions == '7.4' }}
-      run: composer require doctrine/annotations doctrine/cache:~1.0 --dev
+      run: composer require doctrine/annotations:~1.0 doctrine/cache:~1.0 --dev
 
     - name: Run test suite
       run: vendor/bin/phpunit --coverage-clover=coverage.clover
