--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,38 @@ jobs:
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
 
+    - name: Install third-party packages for PHP 7.1
+      if: ${{ matrix.php-versions == '7.1' }}
+      run: composer require doctrine/annotations doctrine/cache:~1.0 --dev
+
+    - name: Install third-party packages for PHP 7.2
+      if: ${{ matrix.php-versions == '7.2' }}
+      run: composer require doctrine/annotations:~1.0 doctrine/cache:~1.0 --dev
+
+    - name: Install third-party packages for PHP 7.3
+      if: ${{ matrix.php-versions == '7.3' }}
+      run: composer require doctrine/annotations:~1.0 doctrine/cache:~1.0 --dev
+
+    - name: Install third-party packages for PHP 7.4
+      if: ${{ matrix.php-versions == '7.4' }}
+      run: composer require doctrine/annotations:~1.0 doctrine/cache:~1.0 --dev
+
+    - name: Install third-party packages for PHP 8.0
+      if: ${{ matrix.php-versions == '8.0' }}
+      run: composer require doctrine/annotations:~1.0 symfony/cache --dev
+
+    - name: Install third-party packages for PHP 8.1
+      if: ${{ matrix.php-versions == '8.1' }}
+      run: composer require doctrine/annotations:~1.0 doctrine/cache:~1.0 doctrine/orm:~2.0 --dev -W --ignore-platform-req php
+
+    - name: Install third-party packages for PHP 8.2
+      if: ${{ matrix.php-versions == '8.2' }}
+      run: composer require doctrine/annotations:~1.0 doctrine/cache:~1.0 doctrine/orm:~2.0 --dev -W --ignore-platform-req php
+
+    - name: Install third-party packages for PHP 8.3
+      if: ${{ matrix.php-versions == '8.3' }}
+      run: composer require doctrine/annotations:~1.0 doctrine/cache:~1.0 doctrine/orm:~2.0 --dev -W --ignore-platform-req php
+
     - name: Run test suite
       run: vendor/bin/phpunit --coverage-clover=coverage.clover
 
